[master] Correct the dhcp-cache-threshold codes treatment of hostname
If a lease is reused as part of dhcp-cache-threshold processing
the hostname (if it exists) needs to be copied from the temporary
lease back to the permanent lease.

Also add additional checks to see if the lease can be reused.
The host pointer, client ID and hardware address shouldn't have
changed.

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -2196,7 +2196,14 @@ if all of the following conditions are true:
     any of the following:
        a. DNS information and DNS updates are enabled
        b. Billing class to which the lease is associated
+       c. The host declaration associated with the lease
+       d. The client id - this may happen if a client boots without
+       a client id and then starts using one in subsequent requests.
 .fi
+.PP
+Note that the lease can be reused if the options the client or relay agent
+sends are changed.  These changes will not be recorded in the in-memory or
+on-disk databases until the client renews after the threshold time is reached.
 .RE
 .PP
 The
