[master] remove uses of vix.com, nominum.com and fugue.com Squashed commit of the following:
commit 375a26d52db75c3f62b8914f36e4f1618253075e
Author: Shawn Routhier <sar@isc.org>
Date:   Thu Aug 18 14:26:28 2016 -0700

    [rt43069] remove uses of vix.com, nominum.com and fugue.com

--- a/server/dhcpd.8
+++ b/server/dhcpd.8
@@ -491,7 +491,7 @@ use a different name server might be declared as follows:
 	  fixed-address 239.252.197.9;
 	  filename "/tftpboot/haagen.boot";
 	  option domain-name-servers 192.5.5.1;
-	  option domain-name "vix.com";
+	  option domain-name "example.com";
 	}
 .fi
 .PP
