--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -266,6 +266,11 @@ options will be ignored.  There is no default require list.
 		also require domain-search;
 	}
 .fi
+
+NOTE: For ISC DHCP release 4.3.5 and earlier, dhclient running in -6 mode does
+not discard offers as described above. This has been corrected as of release
+4.3.6 but must be enabled at compile time (see ENFORCE_DHCPV6_CLIENT_REQUIRE
+in includes/site.h).
 .PP
 .I The
 .B send
