--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-	      Internet Systems Consortium DHCP Distribution
-			   Version 4.3.6b1
-			     7 July 2017
+              Internet Systems Consortium DHCP Distribution
+                            Version 4.3.6
+                             31 July 2017
 
-			      README FILE
+                              README FILE
 
 You should read this file carefully before trying to install or use
 the ISC DHCP Distribution.
@@ -142,12 +142,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.3.6b1.tar.gz
-	tar xvf dhcp-4.3.6b1.tar
+	gunzip dhcp-4.3.6.tar.gz
+	tar xvf dhcp-4.3.6.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.3.6b1 subdirectory that you've just created and
+Now, cd to the dhcp-4.3.6 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
